Fix OUTPUT_(USER|PASSWORD) secrets usage
Previously if the user specified a secret with name `OUTPUT_USER` or
`OUTPUT_PASSWORD` in `secrets` this lead to name clashes.

Signed-off-by: Moritz Reinhardt <moreinhardt@gmail.com>

--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -53,8 +53,10 @@ spec:
         - name: OUTPUT_PATH
           value: {{ .Values.elasticsearch.path | quote }}
 {{- if .Values.elasticsearch.auth.enabled }}
+{{- if .Values.elasticsearch.auth.user }}
         - name: OUTPUT_USER
           value: {{ .Values.elasticsearch.auth.user | quote }}
+{{- end }}
 {{- if .Values.elasticsearch.auth.password }}
         - name: OUTPUT_PASSWORD
           value: {{ .Values.elasticsearch.auth.password | quote }}
