--- a/charts/fluentd-elasticsearch/values.yaml
+++ b/charts/fluentd-elasticsearch/values.yaml
@@ -60,8 +60,8 @@ resources: {}
 elasticsearch:
   auth:
     enabled: false
-    user: "yourUser"
-    password: "yourPass"
+    user: "yourUser"  # set to `null` if OUTPUT_USER is passed as secret
+    password: "yourPass"  # set to `null` if OUTPUT_PASSWORD is passed as secret
   includeTagKey: true
   setOutputHostEnvVar: true
   # If setOutputHostEnvVar is false this value is ignored
@@ -156,6 +156,7 @@ env: {}
 
 # If you want to add custom environment variables from secrets, use the secret list
 secret: []
+# If you pass OUTPUT_USER or OUTPUT_PASSWORD as such, don't forget to set elasticsearch.auth.(user|password) to `null`
 # - name: ELASTICSEARCH_PASSWORD
 #   secret_name: elasticsearch
 #   secret_key: password
